// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getCommandBarWithExportAndStartOver should return command bar with renderExportAndStartOver as true 1`] = `
<DetailsViewCommandBar
  assessmentsProvider={null}
  renderExportAndStartOver={true}
/>
`;

exports[`getCommandBarWithOptionalExportAndStartOver universalCardsUI disabled should return command bar with renderExportAndStartOver as false 1`] = `
<DetailsViewCommandBar
  assessmentsProvider={null}
  featureFlagStoreData={
    Object {
      "universalCardsUI": false,
    }
  }
  renderExportAndStartOver={false}
/>
`;

exports[`getCommandBarWithOptionalExportAndStartOver universalCardsUI enabled should return command bar with renderExportAndStartOver as true 1`] = `
<DetailsViewCommandBar
  assessmentsProvider={null}
  featureFlagStoreData={
    Object {
      "universalCardsUI": true,
    }
  }
  renderExportAndStartOver={true}
/>
`;
